--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Spintunes</string>
-    <string name="extension_name">karoo-spintunes</string>
+    <string name="extension_name">Spintunes</string>
     <string name="player">Player</string>
     <string name="player_description">Player widget</string>
 </resources>
